[package]

name = "yup-oauth2"
version = "1.0.7"
authors = ["Sebastian Thiel <byronimo@gmail.com>", "Lewin Bormann <lbo@spheniscida.de>"]
repository = "https://github.com/dermesser/yup-oauth2"
description = "An oauth2 implementation, providing the 'device', 'service account' and 'installed' authorization flows"
documentation = "https://docs.rs/yup-oauth2/"
keywords = ["google", "oauth", "v2"]
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.8"
chrono = "0.4"
hyper = "0.11"
hyper-rustls = "0.11"
itertools = "0.7"
futures = "0.1"
log = "0.3"
rustls = "0.11.0"
reqwest = "0.8.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.6"
